[shongo] bigger commit, migration to jdk11